feat: add unit tests for model classes and improve coverage (#4)